# MIB

Docs/Ideia/: MI_30701_MEIC.doc  ~$_30701_MEIC.doc  ~WRL0001.tmp
Docs/Ideias/: E-DJ.docx  Message-Oriented MiddleWare (MOM).docx  R-Music.docx  ~$ssage-Oriented MiddleWare (MOM).docx
Docs/Ideias/E-DJ/Artigos/: Information Seeking.doc
Docs/Ideias/MOM/Artigos/: prp_event_mw_talk_cabernet.ppt
Docs/Ideias/MOM/RFC/: Web Services Addressing (WS-Addressing).htm  Web Services Routing Protocol (WS-Routing).htm
Docs/Ideias/MOM/RFC/Web Services Addressing (WS-Addressing)_files/: member_subm
Docs/Ideias/MOM/RFC/Web Services Routing Protocol (WS-Routing)_files/: broker-config.js  broker.js
Docs/Pesquisa/MOM's/: Elvin.docx  Hermes.docx  Siena.docx
Docs/Pesquisa/MOM's/Apache Qpid/: Apache Qpid.docx
Docs/Pesquisa/MOM's/Biztalk/: Biztalk Server.docx
Docs/Pesquisa/MOM's/Distributed PublishSubscribe (PubSub) Event System/: Distributed PublishSubscribe Event System.docx  WSP Event System.doc
Docs/Pesquisa/MOM's/IBM MQSeries/: IBM MQSeries.docx  ~$M MQSeries.docx  ~WRL3404.tmp
Docs/Pesquisa/MOM's/NServiceBus/: NServiceBus.docx  ~$erviceBus.docx
Docs/Pesquisa/OpenSource/Siena/synthetic workload generator/ssbg-1.3.4/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  bool_operators.dist  bootstrap  configure  configure.ac  double_operators.dist  double_values.dist  gen_dictionary.cc  int_operators.dist  io_exception.cc  ssbconf.h.in  ssbg.cc  ssbg.spec  ssbg_main.cc  string_operators.dist  string_values.dist  types.dist
Docs/Pesquisa/OpenSource/Siena/synthetic workload generator/ssbg-1.3.4/siena/: ssbg.h
Docs/Pesquisa/Pesquisa relacionada/Artigos/: Ideias chave.docx  PublishSubscribe.ppt  ~$eias chave.docx  ~WRL0003.tmp  ~WRL1519.tmp  ~WRL3862.tmp
Docs/Pesquisa/Pesquisa relacionada/Artigos/Multicast over content-based publish-subscribe/: SemSD_virgi2.ppt
Docs/Pesquisa/Pesquisa relacionada/RFC/Web Services Addressing (WS-Addressing)_files/: W3C-Member-SUBM.css
Docs/Pesquisa/Protocolos/AMQP/: AMQP.docx  ~$AMQP.docx  ~WRL0003.tmp
Docs/Pesquisa/Protocolos/RestMS/: RestMS.docx
Source/Archive/First/First_Client/: Program.cs
Source/Archive/First/First_Interfaces/Contracts/: EventContract.cs
Source/Archive/First/First_Interfaces/Factories/: ProxyFactory.cs
Source/Archive/First/First_TcpReceiver/: App.config  First_TcpReceiver.csproj  Host.cs  TcpReceiver.cs
Source/Archive/First/_ReSharper.MIB/NamedArguments/: .crc
Source/Archive/First/_ReSharper.MIB/WordIndex/: .crc
Source/MIB/: MIB.sln
Source/MIB/First/: App.config  First.csproj  Host.cs
Source/MIB/First/BlackBox/: Blackbox.cs
Source/MIB/First/First/: First.csproj
Source/MIB/First/First/BlackBox/: Blackbox.cs
Source/MIB/First/First_Client/: First_Client.csproj
Source/MIB/First/First_Client/Properties/: AssemblyInfo.cs
Source/MIB/First/First_Interfaces/: First_Interfaces.csproj
Source/MIB/First/First_Interfaces/ClientNodeInformationTypes/: ClientInformation.cs  TcpClientInformation.cs
Source/MIB/First/First_Interfaces/Contracts/: ClientInformationContract.cs  SubscriptionContract.cs
Source/MIB/First/First_Interfaces/Properties/: AssemblyInfo.cs
Source/MIB/First/First_Interfaces/ServiceInterfaces/: IBlackbox.cs
Source/MIB/First/First_TcpEmitter/: First_TcpEmitter.csproj  Host.cs
Source/MIB/First/Interfaces/: IBlackbox.cs  IEmitter.cs
Source/MIB/First/_ReSharper.MIB/: ModuleIds.xml
Source/MIB/First/_ReSharper.MIB/BuildScriptCache/: .crc
Source/MIB/First/_ReSharper.MIB/TodoCache/: .crc
Source/MIB/First_Interfaces/ClientNodeInformationTypes/: TcpClientInformationAdapter.cs
Source/MIB/First_Interfaces/ServiceInterfaces/: IEmitter.cs  IReceiver.cs
Source/MIB/First_TcpEmitter/: TcpEmitter.cs
Source/MIB/Second/MIB_Second/: MIB_Second.sln  MIB_Second.vsmdi  TraceAndTestImpact.testsettings
Source/MIB/Second/MIB_Second/Back/: MIB_Second.sln
Source/MIB/Second/MIB_Second/Back/Second/: Host.cs  Second.csproj
Source/MIB/Second/MIB_Second/Back/Second_Client/: Program.cs  Second.Client.csproj
Source/MIB/Second/MIB_Second/Back/Second_Interfaces/: Second.Interfaces.csproj
Source/MIB/Second/MIB_Second/Back/Second_TcpEmitter/: Host.cs  Second.TcpEmitter.csproj  TcpEmitter.cs
Source/MIB/Second/MIB_Second/Back/Second_TcpReceiver/: Host.cs  Second.TcpReceiver.csproj  TcpReceiver.cs
Source/MIB/Second/MIB_Second/Blackbox/: Blackbox.cs  Blackbox.csproj  Host.cs
Source/MIB/Second/MIB_Second/Blackbox.Test/: Blackbox.Test.csproj
Source/MIB/Second/MIB_Second/Blackbox/Handlers/: MatchingSubscribe.cs
Source/MIB/Second/MIB_Second/Blackbox/Pipeline/: IPipelineContext.cs  Pipeline.cs  (+2 more)
Source/MIB/Second/MIB_Second/Interfaces/: Interfaces.csproj
Source/MIB/Second/MIB_Second/TcpClient/: Program.cs  TcpClient.csproj
Source/MIB/Second/MIB_Second/TcpEmitter/: TcpEmitter.cs
Source/MIB/Second/MIB_Second/TcpReceiver/: TcpReceiver.cs  TcpReceiver.csproj
Source/MIB/Second/MIB_Second/Tests/: Tests.csproj
Source/MIB/Second/MIB_Second/_ReSharper.MIB_Second/: ModuleIds.xml
Source/MIB/Third/MIB_Third/: Local.testsettings
Source/MIB/Third/MIB_Third/Blackbox/: App.config  Blackbox.cs  Blackbox.csproj
Source/MIB/Third/MIB_Third/Interfaces/: Interfaces.csproj
Source/MIB/Third/MIB_Third/TcpClient/: Program.cs
Source/MIB/Third/MIB_Third/TcpEmitter/: Host.cs  TcpEmitter.csproj
Source/MIB/Third/MIB_Third/TcpReceiver/: Host.cs  TcpReceiver.cs
Source/MIB/Third/MIB_Third/Tests/: Tests.csproj
Source/MIB/Third/MIB_Third/TransactionTest1/: Program.cs  TransactionTest1.csproj  app.config
Source/MIB/Third/MIB_Third/TransactionTest2/: Program.cs  TransactionTest2.csproj
Source/MIB/Third/MIB_Third/_ReSharper.MIB_Second/: ModuleIds.xml
Source/MIB/Third/MIB_Third/_ReSharper.MIB_Third/: ModuleIds.xml
Source/MIB/_ReSharper.MIB/BuildScriptCache/: .crc
Source/MIB/_ReSharper.MIB/DaemonResults/: .crc
Source/MIB/_ReSharper.MIB/FileImages/: .crc
Source/MIB/_ReSharper.MIB/NamedArguments/: .crc
Source/MIB/_ReSharper.MIB/TodoCache/: .crc
Source/MIB/_ReSharper.MIB/WordIndex/: .crc
(+113 files in other folders)
